# recipe-app-api

./: .dockerignore  .flake8  .travis.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: settings.py  urls.py
core/: admin.py  models.py
core/management/commands/: wait_for_db.py
core/migrations/: 0001_initial.py  0002_tag.py  0003_ingredient.py  0004_recipe.py  0005_recipe_image.py
core/tests/: test_admin.py  test_commands.py  test_models.py
recipe/: serializers.py  views.py
recipe/tests/: test_ingredient_api.py  test_recipe_api.py  test_tags_api.py
user/: serializers.py  urls.py  views.py
user/tests/: test_user_api.py
