[tool.poetry]
name = "recipe-app-api"
version = "0.1.0"
description = ""
authors = ["Lucas Pinheiro <lucas4pinheiro@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.4"
Django = "^3.2"
djangorestframework = "^3.12.4"
flake8 = "^3.9.1"
black = "^21.4b1"
psycopg2-binary = "^2.8.6"
coverage = "^5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
